bug fix + spacing correction

--- a/src/style.css
+++ b/src/style.css
@@ -24,4 +24,15 @@
         background-size: cover;
         background-attachment: fixed;
     }
+
+    .reveal {
+        opacity: 0;
+        transform: translateY(-40px);
+    }
+    .reveal-visible {
+        opacity: 1;
+        transform: translateY(0);
+        transition-duration: 1100ms cubic-bezier(0.5, 0, 0, 1);
+    }
 }
+
